# nmap_scan

./: .gitignore  CLAUDE.local.md.example  CLAUDE.md  README.md  SETUP.md  Target_Network.md  check_deps.sh  main.py  pyproject.toml  requirements.txt  rustscan_massive_4phase.sh  targets.json  targets.json.example
.claude/: CLAUDE.md  README.md  hooks.json  settings.json
.claude/agents/: code-analyzer.md  doc-writer.md  docs-researcher.md  implementer.md  planner.md  reviewer.md  web-researcher.md
.claude/hooks/scripts/: hooks-common.sh  on-task-completed.sh  on-teammate-idle.sh
.claude/skills/commit/: SKILL.md
.claude/skills/mcp-analyze/: SKILL.md
.claude/skills/mcp-docs/: SKILL.md
.claude/skills/mcp-search/: SKILL.md
.claude/skills/mcp-test/: SKILL.md
.serena/: project.yml
docs/: AGENT-TEAMS-GUIDE.md  AUTO-MEMORY-GUIDE.md  CLAUDE-MD-GUIDE.md  NMAP-DEEP-DIVE.md  PROJECT-SETUP.md  RUSTSCAN-DEEP-DIVE.md  SCANNER_ARCHITECTURE.md  SKILL-SELECTION.md  TASK7_INTEGRATION_DESIGN.md  TEAMMATE-HOOKS-GUIDE.md  USAGE.md
docs/claude-template/: README.md
scripts/: PROJECT_SUMMARY.md  TEST_SCENARIOS.md  USAGE.md  rustscan_massive.py  rustscan_massive_4phase.sh  targets.json  targets.json.example
scripts/docs/: PHASE2_GUIDE.md
scripts/phases/: phase1.py  phase2.py  phase3.py  phase4.py
scripts/scanner/: checkpoint.py  config.py  logger.py  report.py  scanner.py
scripts/utils/: json_loader.py  nse_script_selector.py  rtt_optimizer.py  subprocess_runner.py  web_bruteforce.py  xml_to_markdown.py
scripts/wordlists/: passwords.txt  usernames.txt
(+10 files in other folders)
